# wikiservice/swagger/com/workingbit/api/BoardApi.java
@@ -1,39 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (2.2.3).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package com.workingbit.api;
-
-import io.swagger.model.BoardContainer;
-
-import io.swagger.annotations.*;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
-
-import java.util.List;
-import javax.validation.constraints.*;
-import javax.validation.Valid;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-09-15T18:21:44.214+03:00")
-
-@Api(value = "board", description = "the board API")
-public interface BoardApi {
-
-    @ApiOperation(value = "", notes = "Returns all pets from the system that the user has access to", response = BoardContainer.class, responseContainer = "List", tags={  })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "A list of pets.", response = BoardContainer.class, responseContainer = "List") })
-    
-    @RequestMapping(value = "/board",
-        produces = { "application/json" }, 
-        consumes = { "application/json" },
-        method = RequestMethod.GET)
-    ResponseEntity<List<BoardContainer>> boardGet();
-
-}
